--- a/themes/EasyRSA.qss
+++ b/themes/EasyRSA.qss
@@ -9,7 +9,7 @@ QWidget{
 Tooltip */
 QToolTip {
 	color: #ffffff;
-	background-color: rgba(35,35,38, 180);
+	background-color: rgba(35, 36, 42, 180);
 	border: 1px solid rgb(35,35,38);
 	background-image: none;
 	background-position: left center;
@@ -24,23 +24,23 @@ QToolTip {
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Bg App */
 #bgApp {
-	background-color: rgb(11,11,11);
+	background-color: rgb(35, 36, 42);
 	border: 1px solid rgb(35,35,38);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Left Menu */
 #leftMenuBg {
-	background-color: rgb(35,35,38);
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(97, 67, 133, 255), stop:1 rgba(81, 99, 149, 255));
 }
 #topLogo {
-	background-color: rgb(35,35,38);
+	background-color: transparent;
 	background-image: url(:/images/images/images/RSA30x30.png);
 	background-position: center;
 	background-repeat: no-repeat;
 }
-#titleLeftApp { font: 63 12pt "Segoe UI Semibold"; }
-#titleLeftDescription { font: 8pt "Segoe UI"; color: rgb(32, 124, 245); }
+#titleLeftApp { font: 81 12pt "Raleway ExtraBold"; }
+#titleLeftDescription { font: 8pt "Segoe UI"; color: #aa63ff; }
 
 /* MENUS */
 #topMenu .QPushButton {
@@ -53,11 +53,11 @@ Left Menu */
 	padding-left: 44px;
 }
 #topMenu .QPushButton:hover {
-	background-color: rgb(11,11,11);
+	background-color: rgb(35,35,38);
 }
 #topMenu .QPushButton:pressed {
-	background-color: rgb(32, 124, 245);
-	color: rgb(255, 255, 255);
+	background-color: #aa63ff;
+	color: #fff;
 }
 #bottomMenu .QPushButton {
 	background-position: left center;
@@ -69,14 +69,14 @@ Left Menu */
 	padding-left: 44px;
 }
 #bottomMenu .QPushButton:hover {
-	background-color: rgb(11,11,11);
+	background-color: rgb(35,35,38);
 }
 #bottomMenu .QPushButton:pressed {
-	background-color: rgb(32, 124, 245);
-	color: rgb(255, 255, 255);
+	background-color: #aa63ff;
+	color: #fff;
 }
 #leftMenuFrame{
-	border-top: 3px solid rgb(35,35,38);
+	border-top: solid rgb(35,35,38);
 }
 
 /* Toggle Button */
@@ -85,7 +85,7 @@ Left Menu */
     background-repeat: no-repeat;
 	border: none;
 	border-left: 20px solid transparent;
-	background-color: rgb(37, 41, 48);
+	background-color: #23242a;
 	text-align: left;
 	padding-left: 44px;
 	color: rgb(113, 126, 149);
@@ -94,7 +94,7 @@ Left Menu */
 	background-color: rgb(11,11,11);
 }
 #toggleButton:pressed {
-	background-color: rgb(32, 124, 245);
+	background-color: #fff;
 }
 
 /* Title Menu */
@@ -107,7 +107,7 @@ Extra Tab */
 	background-color: rgb(35,35,38);
 }
 #extraTopBg {
-	background-color: rgb(32, 124, 245);
+	background-color: #aa63ff;
 }
 
 /* Icon */
@@ -122,12 +122,12 @@ Extra Tab */
 
 /* Btn Close */
 #extraCloseColumnBtn { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
-#extraCloseColumnBtn:hover { background-color: rgb(87, 156, 247); border-style: solid; border-radius: 4px; }
-#extraCloseColumnBtn:pressed { background-color: rgb(46, 130, 240); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:hover { background-color: rgb(35,35,38); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:pressed { background-color: #aa63ff; border-style: solid; border-radius: 4px; }
 
 /* Extra Content */
 #extraContent{
-	border-top: 3px solid rgb(11,11,11);
+	border-top: 3px solid rgb(35,35,38);
 }
 
 /* Extra Top Menus */
@@ -141,17 +141,17 @@ background-position: left center;
 	padding-left: 44px;
 }
 #extraTopMenu .QPushButton:hover {
-	background-color: rgb(11,11,11);
+	background-color: rgb(35,35,38);
 }
 #extraTopMenu .QPushButton:pressed {
-	background-color: rgb(32, 124, 245);
-	color: rgb(255, 255, 255);
+	background-color: #aa63ff;
+	color: #fff;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Content App */
 #contentTopBg{
-	background-color: rgb(35,35,38);
+	background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:0, y2:0, stop:0 rgba(97, 67, 133, 255), stop:1 rgba(81, 99, 149, 255));
 }
 #contentBottom{
 	border-top: 3px solid rgb(35,35,38);
@@ -160,14 +160,14 @@ Content App */
 /* Top Buttons */
 #rightButtons .QPushButton { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
 #rightButtons .QPushButton:hover { background-color: rgb(44, 49, 57); border-style: solid; border-radius: 4px; }
-#rightButtons .QPushButton:pressed { background-color: rgb(23, 26, 30); border-style: solid; border-radius: 4px; }
+#rightButtons .QPushButton:pressed { background-color: #aa63ff; border-style: solid; border-radius: 4px; }
 
 /* Theme Settings */
 #extraRightBox { background-color: rgb(35,35,38); }
-#themeSettingsTopDetail { background-color: rgb(32, 124, 245); }
+#themeSettingsTopDetail { background-color: #aa63ff; }
 
 /* Bottom Bar */
-#bottomBar { background-color: rgb(35,35,38); }
+#bottomBar { background-color: qlineargradient(spread:pad, x1:1, y1:0.511, x2:0, y2:0.517, stop:0 rgba(97, 67, 133, 255), stop:1 rgba(81, 99, 149, 255)); }
 #bottomBar QLabel { font-size: 11px; color: rgb(113, 126, 149); padding-left: 10px; padding-right: 10px; padding-bottom: 2px; }
 
 /* CONTENT SETTINGS */
@@ -182,10 +182,10 @@ Content App */
 	padding-left: 44px;
 }
 #contentSettings .QPushButton:hover {
-	background-color: rgb(11,11,11);
+	background-color: rgb(35,35,38);
 }
 #contentSettings .QPushButton:pressed {
-	background-color: rgb(32, 124, 245);
+	background-color: #aa63ff;
 	color: rgb(255, 255, 255);
 }
 
@@ -205,7 +205,7 @@ QTableWidget::item{
 	gridline-color: rgb(44, 49, 60);
 }
 QTableWidget::item:selected{
-	background-color: rgb(32, 124, 245);
+	background-color: #aa63ff;
 }
 QHeaderView::section{
 	background-color: rgb(35,35,38);
@@ -239,7 +239,7 @@ QLineEdit {
 	border: 2px solid rgb(35,35,38);
 	padding-left: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(0,94,217);
+	selection-background-color: #aa63ff;
 }
 QLineEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
@@ -280,7 +280,7 @@ QScrollBar:horizontal {
 	border-radius: 0px;
 }
 QScrollBar::handle:horizontal {
-    background: rgb(32, 124, 245);
+    background: #aa63ff;
     min-width: 25px;
 	border-radius: 4px;
 }
@@ -318,7 +318,7 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 	border-radius: 0px;
  }
  QScrollBar::handle:vertical {
-	background: rgb(32, 124, 245);
+	background: #aa63ff;
     min-height: 25px;
 	border-radius: 4px;
  }
@@ -409,7 +409,7 @@ QComboBox::drop-down {
 	background-repeat: no-repeat;
  }
 QComboBox QAbstractItemView {
-	color: rgb(0,94,217);
+	color: #aa63ff;
 	background-color: rgb(35,35,38);
 	padding: 10px;
 	selection-background-color: rgb(39, 44, 54);
@@ -427,7 +427,7 @@ QSlider::groove:horizontal:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:horizontal {
-    background-color: rgb(32, 124, 245);
+    background-color: #aa63ff;
     border: none;
     height: 10px;
     width: 10px;
@@ -435,10 +435,10 @@ QSlider::handle:horizontal {
 	border-radius: 5px;
 }
 QSlider::handle:horizontal:hover {
-    background-color: rgb(255, 212, 155);
+    background-color: #aa63ff;
 }
 QSlider::handle:horizontal:pressed {
-    background-color: rgb(0,94,217);
+    background-color: #aa63ff;
 }
 
 QSlider::groove:vertical {
@@ -451,7 +451,7 @@ QSlider::groove:vertical:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:vertical {
-    background-color: rgb(32, 124, 245);
+    background-color: #aa63ff;
 	border: none;
     height: 10px;
     width: 10px;
@@ -459,25 +459,25 @@ QSlider::handle:vertical {
 	border-radius: 5px;
 }
 QSlider::handle:vertical:hover {
-    background-color: rgb(255, 212, 155);
+    background-color: #aa63ff;
 }
 QSlider::handle:vertical:pressed {
-    background-color: rgb(0,94,217);
+    background-color: #aa63ff;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 CommandLinkButton */
 QCommandLinkButton {
-	color: rgb(0,94,217);
+	color: #aa63ff;
 	border-radius: 5px;
 	padding: 5px;
 }
 QCommandLinkButton:hover {
-	color: rgb(255, 170, 255);
+	color: #fff;
 	background-color: rgb(44, 49, 60);
 }
 QCommandLinkButton:pressed {
-	color: rgb(32, 124, 245);
+	color: #aa63ff;
 	background-color: rgb(52, 58, 71);
 }
 
