2FA Login Completed

--- a/UI/loginNew.ui
+++ b/UI/loginNew.ui
@@ -1380,7 +1380,7 @@ background-repeat: no-repeat;</string>
                       <string notr="true">background: transparent;</string>
                      </property>
                      <property name="currentIndex">
-                      <number>0</number>
+                      <number>1</number>
                      </property>
                      <widget class="QWidget" name="home">
                       <property name="styleSheet">
@@ -1727,10 +1727,10 @@ font: 63 10pt &quot;Raleway SemiBold&quot;;
                       <widget class="QLabel" name="twofactoresponse">
                        <property name="geometry">
                         <rect>
-                         <x>340</x>
-                         <y>250</y>
-                         <width>261</width>
-                         <height>41</height>
+                         <x>0</x>
+                         <y>350</y>
+                         <width>471</width>
+                         <height>91</height>
                         </rect>
                        </property>
                        <property name="styleSheet">
@@ -1744,6 +1744,124 @@ font: 63 10pt &quot;Raleway SemiBold&quot;;
                        </property>
                        <property name="alignment">
                         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                       </property>
+                       <property name="wordWrap">
+                        <bool>true</bool>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="logintitle_2">
+                       <property name="geometry">
+                        <rect>
+                         <x>0</x>
+                         <y>0</y>
+                         <width>471</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">font: 57 14pt &quot;Raleway Medium&quot;;</string>
+                       </property>
+                       <property name="lineWidth">
+                        <number>1</number>
+                       </property>
+                       <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Two Factor Enabled&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                       </property>
+                       <property name="alignment">
+                        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="logintitle_3">
+                       <property name="geometry">
+                        <rect>
+                         <x>0</x>
+                         <y>70</y>
+                         <width>471</width>
+                         <height>111</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">color: #aa63ff;
+font: 57 14pt &quot;Raleway SemiBold&quot;;</string>
+                       </property>
+                       <property name="lineWidth">
+                        <number>1</number>
+                       </property>
+                       <property name="text">
+                        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Two factor authentication (2FA) has been enabled on your account. Please enter the 6 digit code from your Authenticator app below to continue.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                       </property>
+                       <property name="alignment">
+                        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                       </property>
+                       <property name="wordWrap">
+                        <bool>true</bool>
+                       </property>
+                      </widget>
+                      <widget class="QLineEdit" name="codebox">
+                       <property name="geometry">
+                        <rect>
+                         <x>130</x>
+                         <y>210</y>
+                         <width>211</width>
+                         <height>30</height>
+                        </rect>
+                       </property>
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(33, 37, 43);
+font: 57 10pt &quot;Raleway Medium&quot;;
+color: rgb(170, 99, 255)</string>
+                       </property>
+                       <property name="text">
+                        <string/>
+                       </property>
+                       <property name="placeholderText">
+                        <string>Code here...</string>
+                       </property>
+                      </widget>
+                      <widget class="QPushButton" name="fasubmit">
+                       <property name="geometry">
+                        <rect>
+                         <x>160</x>
+                         <y>270</y>
+                         <width>151</width>
+                         <height>31</height>
+                        </rect>
+                       </property>
+                       <property name="minimumSize">
+                        <size>
+                         <width>150</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="font">
+                        <font>
+                         <family>Raleway SemiBold</family>
+                         <pointsize>10</pointsize>
+                         <weight>7</weight>
+                         <italic>false</italic>
+                         <bold>false</bold>
+                        </font>
+                       </property>
+                       <property name="cursor">
+                        <cursorShape>PointingHandCursor</cursorShape>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">background-color: #aa63ff;
+font: 63 10pt &quot;Raleway SemiBold&quot;;
+</string>
+                       </property>
+                       <property name="text">
+                        <string>Submit Code</string>
+                       </property>
+                       <property name="icon">
+                        <iconset>
+                         <normaloff>images/icons/cil-mobile.png</normaloff>images/icons/cil-mobile.png</iconset>
                        </property>
                       </widget>
                      </widget>
