--- a/UI/newRegister.ui
+++ b/UI/newRegister.ui
@@ -1359,28 +1359,6 @@ background-repeat: no-repeat;</string>
                       <property name="styleSheet">
                        <string notr="true"/>
                       </property>
-                      <widget class="QLabel" name="responsetitle">
-                       <property name="geometry">
-                        <rect>
-                         <x>130</x>
-                         <y>360</y>
-                         <width>221</width>
-                         <height>31</height>
-                        </rect>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">font: 8pt &quot;Segoe UI&quot;; color: rgb(255, 166, 121);</string>
-                       </property>
-                       <property name="lineWidth">
-                        <number>1</number>
-                       </property>
-                       <property name="text">
-                        <string/>
-                       </property>
-                       <property name="alignment">
-                        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-                       </property>
-                      </widget>
                       <widget class="QLabel" name="logintitle_2">
                        <property name="geometry">
                         <rect>
@@ -1567,7 +1545,7 @@ font: 63 10pt &quot;Raleway SemiBold&quot;;</string>
                         <string>Cancel</string>
                        </property>
                       </widget>
-                      <widget class="QLabel" name="responsetitle_2">
+                      <widget class="QLabel" name="responsetitle">
                        <property name="geometry">
                         <rect>
                          <x>90</x>
@@ -1588,6 +1566,9 @@ color: rgb(170, 99, 255)</string>
                        </property>
                        <property name="alignment">
                         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                       </property>
+                       <property name="wordWrap">
+                        <bool>true</bool>
                        </property>
                       </widget>
                      </widget>
