--- a/UI/newMain.ui
+++ b/UI/newMain.ui
@@ -52,7 +52,7 @@ QToolTip {
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
-	border-left: 2px solid rgb(0,94,217);
+	border-left: 2px solid rgb(97, 67, 133);
 	text-align: left;
 	padding-left: 8px;
 	margin: 0px;
@@ -1931,7 +1931,7 @@ p, li { white-space: pre-wrap; }
                     <string notr="true">background: transparent;</string>
                    </property>
                    <property name="currentIndex">
-                    <number>4</number>
+                    <number>3</number>
                    </property>
                    <widget class="QWidget" name="home">
                     <property name="styleSheet">
@@ -2637,7 +2637,7 @@ font: 81 10pt &quot;Raleway ExtraBold&quot;;</string>
                               <rect>
                                <x>0</x>
                                <y>0</y>
-                               <width>218</width>
+                               <width>353</width>
                                <height>218</height>
                               </rect>
                              </property>
@@ -4342,8 +4342,8 @@ border-bottom-right-radius :7px;</string>
                     <widget class="QLabel" name="dashboardTitle_11">
                      <property name="geometry">
                       <rect>
-                       <x>690</x>
-                       <y>450</y>
+                       <x>680</x>
+                       <y>120</y>
                        <width>121</width>
                        <height>41</height>
                       </rect>
@@ -4364,8 +4364,8 @@ border-bottom-right-radius :7px;</string>
                     <widget class="QLabel" name="dangerBorder">
                      <property name="geometry">
                       <rect>
-                       <x>680</x>
-                       <y>450</y>
+                       <x>670</x>
+                       <y>120</y>
                        <width>491</width>
                        <height>121</height>
                       </rect>
@@ -4387,8 +4387,8 @@ border-color: rgb(255, 0, 0);</string>
                     <widget class="QWidget" name="regenkeysWidget" native="true">
                      <property name="geometry">
                       <rect>
-                       <x>690</x>
-                       <y>480</y>
+                       <x>680</x>
+                       <y>150</y>
                        <width>151</width>
                        <height>21</height>
                       </rect>
@@ -4397,8 +4397,8 @@ border-color: rgb(255, 0, 0);</string>
                     <widget class="QWidget" name="changeBitLength" native="true">
                      <property name="geometry">
                       <rect>
-                       <x>690</x>
-                       <y>510</y>
+                       <x>680</x>
+                       <y>180</y>
                        <width>151</width>
                        <height>21</height>
                       </rect>
@@ -4627,8 +4627,8 @@ font: 57 10pt &quot;Raleway Medium&quot;;</string>
                     <widget class="QWidget" name="dangerZone3Widget" native="true">
                      <property name="geometry">
                       <rect>
-                       <x>690</x>
-                       <y>540</y>
+                       <x>680</x>
+                       <y>210</y>
                        <width>151</width>
                        <height>21</height>
                       </rect>
@@ -4942,6 +4942,44 @@ font: 57 10pt &quot;Raleway Medium&quot;;</string>
                       <enum>Qt::Horizontal</enum>
                      </property>
                     </widget>
+                    <widget class="QLabel" name="announceBox2">
+                     <property name="geometry">
+                      <rect>
+                       <x>70</x>
+                       <y>540</y>
+                       <width>1031</width>
+                       <height>31</height>
+                      </rect>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">background-color: rgb(206, 55, 8);border-top-left-radius :15px;border-top-right-radius :15px;border-bottom-left-radius :15px;border-bottom-right-radius :15px;
+font: 81 10pt &quot;Raleway ExtraBold&quot;;</string>
+                     </property>
+                     <property name="frameShape">
+                      <enum>QFrame::Panel</enum>
+                     </property>
+                     <property name="frameShadow">
+                      <enum>QFrame::Raised</enum>
+                     </property>
+                     <property name="lineWidth">
+                      <number>0</number>
+                     </property>
+                     <property name="text">
+                      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; color:#d80a14;&quot;&gt;ErrorBox&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                     </property>
+                     <property name="textFormat">
+                      <enum>Qt::RichText</enum>
+                     </property>
+                     <property name="scaledContents">
+                      <bool>false</bool>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignCenter</set>
+                     </property>
+                     <property name="wordWrap">
+                      <bool>false</bool>
+                     </property>
+                    </widget>
                     <zorder>dangerBorder</zorder>
                     <zorder>dashboardTitle_10</zorder>
                     <zorder>dashboardTitle_11</zorder>
@@ -4965,6 +5003,7 @@ font: 57 10pt &quot;Raleway Medium&quot;;</string>
                     <zorder>sha512</zorder>
                     <zorder>line_9</zorder>
                     <zorder>line_10</zorder>
+                    <zorder>announceBox2</zorder>
                    </widget>
                    <widget class="QWidget" name="Account">
                     <widget class="QLabel" name="dashboardTitle_12">
@@ -4994,7 +5033,7 @@ font: 57 10pt &quot;Raleway Medium&quot;;</string>
                       <rect>
                        <x>20</x>
                        <y>120</y>
-                       <width>151</width>
+                       <width>191</width>
                        <height>31</height>
                       </rect>
                      </property>
@@ -5022,11 +5061,76 @@ font: 63 10pt &quot;Raleway SemiBold&quot;;
 </string>
                      </property>
                      <property name="text">
-                      <string>Enable 2 Factor</string>
+                      <string>Enable 2 Factor/Get Seed</string>
                      </property>
                      <property name="icon">
                       <iconset>
                        <normaloff>images/icons/cil-mobile.png</normaloff>images/icons/cil-mobile.png</iconset>
+                     </property>
+                     <property name="flat">
+                      <bool>false</bool>
+                     </property>
+                    </widget>
+                    <widget class="QLabel" name="tooltip1">
+                     <property name="geometry">
+                      <rect>
+                       <x>220</x>
+                       <y>130</y>
+                       <width>16</width>
+                       <height>16</height>
+                      </rect>
+                     </property>
+                     <property name="toolTip">
+                      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#ffffff;&quot;&gt;This will send a code to you every time you log in. &lt;br&gt;Click this if you have also lost the seed you require to add this account to your Authenticator app.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">font: 57 18pt &quot;Raleway Medium&quot;;</string>
+                     </property>
+                     <property name="lineWidth">
+                      <number>1</number>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                     <property name="pixmap">
+                      <pixmap resource="resources.qrc">:/icons/images/icons/information.png</pixmap>
+                     </property>
+                     <property name="scaledContents">
+                      <bool>true</bool>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignHCenter|Qt::AlignTop</set>
+                     </property>
+                    </widget>
+                    <widget class="QLabel" name="disabledText1">
+                     <property name="geometry">
+                      <rect>
+                       <x>20</x>
+                       <y>160</y>
+                       <width>221</width>
+                       <height>21</height>
+                      </rect>
+                     </property>
+                     <property name="toolTip">
+                      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#ffffff;&quot;&gt;This will send a code to you every time you log in. &lt;br&gt;Click this if you have also lost the seed you require to add this account to your Authenticator app.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">font: 57 10pt &quot;Raleway Medium&quot;;</string>
+                     </property>
+                     <property name="lineWidth">
+                      <number>1</number>
+                     </property>
+                     <property name="text">
+                      <string>2 Factor Authentication Disabled</string>
+                     </property>
+                     <property name="pixmap">
+                      <pixmap resource="resources.qrc">:/icons/images/icons/information.png</pixmap>
+                     </property>
+                     <property name="scaledContents">
+                      <bool>true</bool>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
                      </property>
                     </widget>
                    </widget>
